@@ -4,12 +4,15 @@ TODO: revisit 59.x timer in the light of modern powersaving
 TODO: ^ maybe just increase it when timerfd, modern linux only thing that counts?
 TODO: document EV_TSTAMP_T
 
+TODO: add ev_io_set_events, or ev_io_modify, or ev_io_change, or..., without IOFDSET
 	- the 4.31 timerfd code wrongly changes the priority of the signal
           fd watcher, which is usually harmless unless signal fds are
           also used (found via cpan tester service).
+        - do not wake up every minute when timerfd is used to detect timejumps.
         - support a lot more "uncommon" compile time configurations,
           such as ev_embed enabled but ev_timer disabled.
         - the linux aio backend is no longer compiled in by default.
+        - update to libecb version 0x00010008.
 
 4.31 Fri Dec 20 21:58:29 CET 2019
 	- handle backends with minimum wait time a bit better by not
